--- a/paark_frontend/src/views/Booking/Booking.scss
+++ b/paark_frontend/src/views/Booking/Booking.scss
@@ -40,13 +40,25 @@
           width: max-content;
           position: absolute;
           height: 600px;
-          padding: 0;
+          padding: 0px;
           transition: transform ease 1s;
+
+          @media only screen and (max-width: 750px) {
+            padding: 12px;
+          }
 
           &.switchX1 {
             transform: translateX(-500px);
+
+            @media only screen and (max-width: 750px) {
+              transform: translateX(-366px);
+            }
             &.switchX2 {
               transform: translateX(-1000px);
+
+              @media only screen and (max-width: 750px) {
+                transform: translateX(-732px);
+              }
             }
           }
 
@@ -57,14 +69,14 @@
             width: 500px;
             transition: opacity ease 0.3s;
 
+            @media only screen and (max-width: 750px) {
+              width: 366px;
+            }
+
             &__container {
               display: flex;
               flex-direction: column;
               padding-top: 1rem !important;
-
-              @media only screen and (max-width: 750px) {
-                width: 350px;
-              }
 
               &__cta {
                 margin-bottom: 1rem;
